--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
-    "remote.WSL1.connectionMethod": "wslExeProxy"
+    "remote.WSL1.connectionMethod": "wslExeProxy",
+    "gitlens.terminal.overrideGitEditor": true,
+    "gitlens.proxy": {
+        
+    }
 }
