--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,27 @@
-out
-dist
-node_modules
-.vscode-test/
+.vscode/**
+.vscode-test/**
+out/
 *.vsix
 *.pyproj
+.DS_Store
+package-lock.json
+.yarnrc
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock
+mock
+bak
+# Editor directories and files
 .vs/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
