Change display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "shadow-reader-enhance",
-	"displayName": "shadow reader",
+	"displayName": "shadow reader enhanced",
 	"description": "摸鱼划水看书，十分隐蔽",
 	"version": "0.8.3",
 	"publisher": "EWinner1",
