--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-.vscode/**
-.vscode-test/**
-out/
+out
+dist
+node_modules
+.vscode-test/
 *.vsix
 *.pyproj
-.DS_Store
-package-lock.json
-.yarnrc
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
-node_modules/
-dist/
+.vs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-yarn.lock
-mock
-bak
+.DS_Store
+package-lock.json
+.yarnrc
 # Editor directories and files
 .vs/
 .idea/
