--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@ node_modules
 *.vsix
 *.pyproj
 .vs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+package-lock.json
+.yarnrc
+# Editor directories and files
+.vs/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
